--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ irisCluster$cluster &lt;- as.factor(irisCluster$cluster)
 ggplot(iris, aes(Petal.Length, Petal.Width, color = irisCluster$cluster)) + geom_point()
 </code></pre>
 
-<p><img src="figure/unnamed-chunk-2-1.png" alt="plot of chunk unnamed-chunk-2"></p>
+<p><img src="assets/fig/unnamed-chunk-2-1.png" alt="plot of chunk unnamed-chunk-2"></p>
 
   </article>
   <!-- Presenter Notes -->
@@ -112,7 +112,10 @@ ggplot(iris, aes(Petal.Length, Petal.Width, color = irisCluster$cluster)) + geom
     <h2>Reference</h2>
   </hgroup>
   <article data-timings="">
-    
+    <p>Shiny App Repo: <a href="https://github.com/ttlilac/productAssignment">https://github.com/ttlilac/productAssignment</a></p>
+
+<p>Shiny App Link: <a href="https://ttlilac.shinyapps.io/kmean/">https://ttlilac.shinyapps.io/kmean/</a></p>
+
   </article>
   <!-- Presenter Notes -->
 </slide>
